Fixed screen sizing on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: coral;
+    height: 700px;
 }
 
 #frame {
@@ -9,8 +10,10 @@ body {
     flex-direction: column;
     gap: 10px;
     padding: 20px;
-    height: 650px;
-    width: 550px;
+    height: 100%;
+    max-height: 650px;
+    width: 80%;
+    max-width: 550px;
     background-color: silver;
     border-color: black;
 }
@@ -20,6 +23,7 @@ body {
     margin: 0px;
     padding: 5px;
     max-height: 150px;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -46,23 +50,31 @@ body {
 }
 
 #clear {
-    height: 75px;
-    width: 270px;
+    max-height: 75px;
+    max-width: 270px;
+    height: 80%;
+    width: 80%;
     font-weight: bold;
     font-size: 25px;
+    padding: 6px;
     background-color: lightblue;
 }
 
 #delete {
-    height: 75px;
-    width: 270px;
+    max-height: 75px;
+    max-width: 270px;
+    height: 80%;
+    width: 80%;
     font-weight: bold;
     font-size: 25px;
+    padding: 6px;
     background-color: lightblue;
 }
 
 #numberPad {
     display: flex;
     flex-wrap: wrap;
-    height: 450px;
+    max-height: 450px;
+    max-width: 550px;
+    height: 100%;
 }
